--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,17 @@
 spring:
   profiles:
     active: dev
+
+---
+
+spring:
+  profiles:dev
+  application:
+    name:consumer-api-dev
+    
+---
+spring:
+  profiles:test
+  application:
+    name:consumer-api-test
+  
